Lobster: fixed text spacing and coloring

--- a/src/components/LogView/style.css
+++ b/src/components/LogView/style.css
@@ -1,7 +1,8 @@
 .bookmark-line { background-color: yellow; }
 .monospace { font-family: monospace;}
 .inline { display: inline-block; }
-.no-wrap { white-space: nowrap; }
+.no-wrap { white-space: pre; }
+.wrap { white-space: pre-wrap; }
 .padded-text { padding-left: 5px; padding-right: 5px; }
 .no-select {
   -webkit-user-select: none;  /* Chrome all / Safari all */
